--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -361,6 +361,8 @@
     <string name="refreshing_notifications">Refreshing notification token…</string>
     <string name="refresh_firebase_warning">If you start this process, you <b>must</b> go through the whole thing.
         After it is done, you will need to log in again, on all your other devices. Do you wish to continue?</string>
+    <string name="show_conversation_history">Show Conversation History</string>
+    <string name="show_conversation_history_summary">Notifications will display previous messages in the conversation</string>
 
 
     <!-- MMS Configuration Settings -->
