--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -50,7 +50,7 @@
     <string name="menu_conversation_information">Conversation information</string>
     <string name="menu_conversation_blacklist">Blacklist contact</string>
     <string name="menu_conversation_schedule">Schedule a message</string>
-    <string name="menu_contact_settings">Contact settings</string>
+    <string name="menu_contact_settings">Conversation settings</string>
     <string name="menu_group_settings">Group settings</string>
     <string name="menu_snooze_off">Off</string>
     <string name="menu_snooze_1">1 hour</string>
